[package]
name = "netbench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/onestay/netbench"
homepage = "https://github.com/onestay/netbench"
description = "network bandwidth measuring tool inspired by iperf3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8" }
parking_lot = { version = "0.12" }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
termcolor = "1"
once_cell = "1"
atty = "0.2.14"
